# Surface-Anaysis

./: .gitignore  CMakeLists.txt  Proteins  README.md
src/: dialog.cpp  dialog.hpp  distance.hpp  fetch.cpp  fetch.hpp  graph.cpp  graph.hpp  main.cpp  main.hpp  patch.hpp  surface_analysis.cpp  surface_analysis.hpp  surface_anaysis.cpp  surface_anaysis.hpp  vertex.hpp
